k8s/k3s-home/argocd/system/cilium/gateway-calibre.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: calibre
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.10.21.60
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.otohgunga.nl"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard-otohgunga-nl-tls
      allowedRoutes:
        namespaces:
          from: All
